common-applications/control/playground-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-manager-service
  namespace: playground-manager
spec:
  ports:
    - name: playground-manager
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: playground-manager
  loadBalancerIP: 119.8.24.33
  type: LoadBalancer
