common-applications/control/playground-manager/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: moocstudio-openeuler-org-ingress
  namespace: playground-manager
spec:
  tls:
    - hosts:
        - moocstudio.openeuler.org
      secretName: moocstudio-openeuler-org-tls
  rules:
    - host: moocstudio.openeuler.org
      http:
        paths:
          - backend:
              serviceName: playground-manager-service
              servicePort: 80
            path: /api(/|$)(.*)
